--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-</html> </html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>Моя тестовая страница</title>
+  </head>
+  <body>
+  </body>
+</html>
